--- a/components/image.module.css
+++ b/components/image.module.css
@@ -7,25 +7,28 @@
   object-fit: cover;
 }
 
-.containerMini {
-  width: 100%;
-  padding-bottom: 100%;
-}
-
 .imageContainer {
-  --transition: 0.2s ease; 
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
   padding: 4rem;
   box-sizing: border-box;
   z-index: 1;
+}
+
+.imageMini {
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%;
+  border-radius: 10px;
   box-shadow: 0 3px 20px 5px rgba(0, 0, 0, 0.15);
   overflow: hidden;
-  transition:
-    top var(--transition),
-    left var(--transition),
-    width var(--transition),
-    height var(--transition);
+}
+
+.imageFull {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
