--- a/components/list-item.module.css
+++ b/components/list-item.module.css
@@ -24,7 +24,8 @@
   line-height: 1;
   font-size: 3.375em;
   font-weight: 800;
-  animation-duration: 0.2s;
+  animation-duration: 0.35s;
+  animation-delay: 0.1s;
   animation-name: list-appear;
   animation-timing-function: ease;
 }
@@ -32,7 +33,8 @@
 .body {
   margin: 0 0 2rem 0;
   font-size: 1.5em;
-  animation-duration: 0.2s;
+  animation-duration: 0.35s;
+  animation-delay: 0.15s;
   animation-name: list-appear;
   animation-timing-function: ease;
 }
@@ -50,7 +52,8 @@
   color: #ffffff;
   font-size: 2.25rem;
   cursor: pointer;
-  animation-duration: 0.3s;
+  animation-duration: 0.35s;
+  animation-delay: 0.2s;
   animation-name: list-appear;
   animation-timing-function: ease;
 }
