--- a/components/image.module.css
+++ b/components/image.module.css
@@ -19,15 +19,22 @@
 .imageMini {
   position: relative;
   width: 100%;
-  padding-bottom: 100%;
   border-radius: 10px;
   box-shadow: 0 3px 20px 5px rgba(0, 0, 0, 0.15);
   overflow: hidden;
 }
 
+.imageMini:after {
+  content: '';
+  display: block;
+  padding-bottom: 100%;
+}
+
 .imageFull {
   position: absolute;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
   height: 100%;
